--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tqdm = "^4.66.2"
 sentence-transformers = "^2.6.1"
 markdown = "^3.6"
 rank-bm25 = "^0.2.2"
+pre-commit = "^3.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
