--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ packages = [{include = "ai_bot"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 langchain = "^0.1.13"
-faiss-gpu = "^1.7.2"
 pymupdf = "^1.24.0"
 tqdm = "^4.66.2"
 sentence-transformers = "^2.6.1"
 markdown = "^3.6"
 rank-bm25 = "^0.2.2"
 pre-commit = "^3.7.0"
+qdrant-client = "^1.9.0"
+python-docx = "^1.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
